Added a DocumentService to add a facade to document operations needed by the explorer service.